# nix-world

./: .gitignore  Justfile  default.nix  shell.nix  sources.nix
hosts/: default.nix
hosts/_shared/: default.nix  ssh-keys.nix  ssh.nix
hosts/dummies/: default.nix
hosts/dummies/_shared/: default.nix  users.nix
hosts/dummies/vps-cea655b4/: configuration.nix  hardware-configuration.nix
hosts/dummies/vps-d353a2f5/: configuration.nix
hosts/dummies/vps-do-ams3-01/: configuration.nix  hardware-configuration.nix
hosts/dummies/vps-do-nyc1-01/: configuration.nix
hosts/isaac/: default.nix
hosts/isaac/nixos/: configuration.nix
hosts/kira/: default.nix
hosts/kira/home/: configuration.nix  programs.nix  services.nix
hosts/kira/home/files/cargo-templates/leptos/: Cargo.toml  Justfile.local  package.json  tailwind.config.js
hosts/kira/home/files/cargo-templates/leptos/src/: log.rs  main.rs  static_files.rs
hosts/kira/home/files/cargo-templates/leptos/src/app/: mod.rs
hosts/kira/system/: configuration.nix
hosts/kiwivault/: default.nix
hosts/kiwivault/nixos/: configuration.nix  rootCA.pem
hosts/mel/: default.nix
hosts/mel/nixos/: configuration.nix  network.nix
lib/: default.nix
lib/world/: default.nix  types.nix
modules/home-manager/: default.nix
modules/home-manager/lib/: default.nix  package.nix  python.nix
modules/home-manager/misc/: data.nix  default.nix  env.nix  home.nix  nix.nix  opengl.nix  upgrade-diff.nix
modules/home-manager/programs/: act.nix  aura.nix  bpython.nix  default.nix  discord.nix  element.nix  eza.nix  ferdium.nix  fish.nix  gajim.nix  git.nix  glab.nix  glances.nix  glow.nix  hub.nix  kde.nix  kitty.nix  lan-mouse.nix  litecli.nix  mise.nix  mux.nix  neovim.nix  nix-init.nix  nvchecker.nix  paru.nix  (+11 more)
modules/nixos/: default.nix
modules/shared/: default.nix  ssh.nix  world.nix
modules/system-manager/: default.nix  lib.nix
modules/world/: default.nix  host.nix  nixpkgs.nix  package.nix
npins/: sources.json
pkgs/: default.nix  lix.nix  overrides.nix  rust.nix  top-level.nix  util.nix
pkgs/applications/: default.nix
pkgs/build-support/: default.nix
pkgs/data/: default.nix
pkgs/kiwi-packages/: default.nix
pkgs/servers/: default.nix
pkgs/stdenv/: adapters.nix
scripts/: cache-uploader.nix  update-checker.nix
(+411 files in other folders)
